--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;500&family=Ysabeau+Infant:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
 
@@ -72,7 +72,6 @@
               playfair: ["Playfair Display", "serif"],
               montserrat: ["Montserrat", "sans-serif"],
               mrsdelafield: ['"Mrs Saint Delafield"', "cursive"],
-              ysabeau: ['"Ysabeau Infant"', "sans-serif"],
             },
             colors: {
               "primary-light": "#f3f4f6", // gray-100
@@ -197,6 +196,53 @@
         height: clamp(120px, 20vw, 260px);
         opacity: 0.15;
         transform: none;
+      }
+
+      /* Waving animation for parallax elements - FASTER */
+      @keyframes wave {
+        0%, 100% {
+          transform: translateY(0) rotate(0deg);
+        }
+        25% {
+          transform: translateY(-15px) rotate(3deg);
+        }
+        50% {
+          transform: translateY(0) rotate(0deg);
+        }
+        75% {
+          transform: translateY(15px) rotate(-3deg);
+        }
+      }
+
+      @keyframes wave-reverse {
+        0%, 100% {
+          transform: translateY(0) rotate(0deg);
+        }
+        25% {
+          transform: translateY(15px) rotate(-3deg);
+        }
+        50% {
+          transform: translateY(0) rotate(0deg);
+        }
+        75% {
+          transform: translateY(-15px) rotate(3deg);
+        }
+      }
+
+      .back-layer .square-left {
+        animation: wave 6s ease-in-out infinite;
+      }
+
+      .back-layer .square-right {
+        animation: wave-reverse 7s ease-in-out infinite;
+      }
+
+      .front-layer .square-left {
+        animation: wave-reverse 5s ease-in-out infinite;
+      }
+
+      .front-layer .square-right {
+        animation: wave 5.5s ease-in-out infinite;
       }
 
       @media (max-width: 768px) {
@@ -721,7 +767,9 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
+                  >
                     Luh Mas Tia Andriani
                   </p>
                 </div>
@@ -739,7 +787,9 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
+                  >
                     Ni Kadek Mas Ita Andriantini
                   </p>
                 </div>
@@ -756,7 +806,9 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
+                  >
                     Komang Mas Eti Andriantina
                   </p>
                 </div>
@@ -773,7 +825,9 @@
                 <div
                   class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                 >
-                  <p class="text-xl text-gray-800 tracking-wide text-center font-ysabeau font-medium">
+                  <p
+                    class="text-md sm:text-xl text-gray-800 tracking-wide text-center"
+                  >
                     Ketut Mas Tyo Teja Adriana
                   </p>
                 </div>
@@ -791,13 +845,13 @@
                 <div
                   class="flex flex-col md:flex-row justify-center items-center md:gap-8"
                 >
-                  <div class="text-lg sm:text-xl font-ysabeau font-medium">I Nyoman Sumanasa</div>
+                  <div class="text-lg sm:text-xl">I Nyoman Sumanasa</div>
                   <div
                     class="text-secondary-dark text-6xl sm:text-7xl md:text-8xl leading-none font-mrsdelafield"
                   >
                     &amp;
                   </div>
-                  <div class="text-lg sm:text-xl font-ysabeau font-medium">Ketut Santi Purnami</div>
+                  <div class="text-lg sm:text-xl">Ketut Santi Purnami</div>
                 </div>
               </div>
             </div>
