--- a/index.html
+++ b/index.html
@@ -755,117 +755,121 @@
       <section id="mempelai" class="relative full-width-accent pb-12 sm:pb-16">
         <div class="curved-divider"></div>
         <div class="w-full px-5 sm:px-8">
-          <div class="text-center mb-6 sm:mb-8" data-aos="fade-up">
-            <h2
-              class="text-4xl sm:text-5xl md:text-6xl font-mrsdelafield text-secondary-dark"
-            >
-              Keluarga Yang Berbahagia
-            </h2>
-            <p class="mt-2 text-gray-600 max-w-2xl mx-auto">
-              Merupakan kehormatan jika Bapak/Ibu/Saudara/i berkenan hadir
-              memberikan doa restu.
-            </p>
-          </div>
-
-          <div
-            class="grid gid-cols-1 md:grid-cols-2 md:grid-rows-2 gap-4 lg:grid-cols-4 lg:grid-rows-1"
-          >
-            <!-- Card -->
-            <div class="relative overflow-hidden rounded-xl shadow-lg">
-              <div class="aspect-square lg:aspect-[3/4] relative">
-                <img
-                  src="https://picsum.photos/600/800?random=1"
-                  alt="Luh Mas Tia Andriani"
-                  class="w-full h-full object-cover"
-                />
-                <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
-                >
-                  <p
-                    class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
-                  >
-                    Luh Mas Tia Andriani
-                  </p>
-                </div>
-              </div>
+          <div class="container mx-auto px-6 text-center">
+            <div class="text-center mb-6 sm:mb-8" data-aos="fade-up">
+              <h2
+                class="text-4xl sm:text-5xl md:text-6xl font-mrsdelafield text-secondary-dark"
+              >
+                Keluarga Yang Berbahagia
+              </h2>
+              <p class="mt-2 text-gray-600 max-w-2xl mx-auto">
+                Merupakan kehormatan jika Bapak/Ibu/Saudara/i berkenan hadir
+                memberikan doa restu.
+              </p>
             </div>
 
-            <!-- Repeat for others -->
-            <div class="relative overflow-hidden rounded-xl shadow-lg">
-              <div class="aspect-square lg:aspect-[3/4] relative">
-                <img
-                  src="https://picsum.photos/600/800?random=2"
-                  alt="Ni Kadek Mas Ita Andriantini"
-                  class="w-full h-full object-cover"
-                />
-                <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
-                >
-                  <p
-                    class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
-                  >
-                    Ni Kadek Mas Ita Andriantini
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="relative overflow-hidden rounded-xl shadow-lg">
-              <div class="aspect-square lg:aspect-[3/4] relative">
-                <img
-                  src="https://picsum.photos/600/800?random=3"
-                  alt="Komang Mas Eti Andriantina"
-                  class="w-full h-full object-cover"
-                />
-                <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
-                >
-                  <p
-                    class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
-                  >
-                    Komang Mas Eti Andriantina
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="relative overflow-hidden rounded-xl shadow-lg">
-              <div class="aspect-square lg:aspect-[3/4] relative">
-                <img
-                  src="https://picsum.photos/600/800?random=4"
-                  alt="Ketut Mas Tyo Teja Adriana"
-                  class="w-full h-full object-cover"
-                />
-                <div
-                  class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
-                >
-                  <p
-                    class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
-                  >
-                    Ketut Mas Tyo Teja Adriana
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Shared parents info (moved from individual cards) -->
-          <div class="mt-6 sm:mt-8" data-aos="fade-up">
             <div
-              class="bg-white/80 backdrop-blur-sm rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
+              class="grid gid-cols-1 md:grid-cols-2 md:grid-rows-2 gap-4 lg:grid-cols-4 lg:grid-rows-1"
             >
-              <p class="text-sm sm:text-base">Putra Putri dari:</p>
-              <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
-                <div
-                  class="flex flex-col md:flex-row justify-center items-center md:gap-8"
-                >
-                  <div class="text-2xl ysabeau-infant">I Nyoman Sumanasa</div>
+              <!-- Card -->
+              <div class="relative overflow-hidden rounded-xl shadow-lg">
+                <div class="aspect-square lg:aspect-[3/4] relative">
+                  <img
+                    src="https://picsum.photos/600/800?random=1"
+                    alt="Luh Mas Tia Andriani"
+                    class="w-full h-full object-cover"
+                  />
                   <div
-                    class="-mb-4 text-secondary-dark text-6xl sm:text-7xl md:text-8xl leading-none font-mrsdelafield"
+                    class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
                   >
-                    &amp;
+                    <p
+                      class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
+                    >
+                      Luh Mas Tia Andriani
+                    </p>
                   </div>
-                  <div class="text-2xl ysabeau-infant">Ketut Santi Purnami</div>
+                </div>
+              </div>
+
+              <!-- Repeat for others -->
+              <div class="relative overflow-hidden rounded-xl shadow-lg">
+                <div class="aspect-square lg:aspect-[3/4] relative">
+                  <img
+                    src="https://picsum.photos/600/800?random=2"
+                    alt="Ni Kadek Mas Ita Andriantini"
+                    class="w-full h-full object-cover"
+                  />
+                  <div
+                    class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
+                  >
+                    <p
+                      class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
+                    >
+                      Ni Kadek Mas Ita Andriantini
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="relative overflow-hidden rounded-xl shadow-lg">
+                <div class="aspect-square lg:aspect-[3/4] relative">
+                  <img
+                    src="https://picsum.photos/600/800?random=3"
+                    alt="Komang Mas Eti Andriantina"
+                    class="w-full h-full object-cover"
+                  />
+                  <div
+                    class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
+                  >
+                    <p
+                      class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
+                    >
+                      Komang Mas Eti Andriantina
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="relative overflow-hidden rounded-xl shadow-lg">
+                <div class="aspect-square lg:aspect-[3/4] relative">
+                  <img
+                    src="https://picsum.photos/600/800?random=4"
+                    alt="Ketut Mas Tyo Teja Adriana"
+                    class="w-full h-full object-cover"
+                  />
+                  <div
+                    class="absolute bottom-0 left-0 right-0 h-1/2 bg-gradient-to-t from-white via-white/80 to-transparent flex items-end justify-center pb-2 sm:pb-6"
+                  >
+                    <p
+                      class="text-2xl md:text-xl text-gray-800 tracking-wide text-center ysabeau-infant"
+                    >
+                      Ketut Mas Tyo Teja Adriana
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Shared parents info (moved from individual cards) -->
+            <div class="mt-6 sm:mt-8" data-aos="fade-up">
+              <div
+                class="bg-white/80 backdrop-blur-sm rounded-xl shadow p-4 sm:p-6 text-gray-700 text-center"
+              >
+                <p class="text-sm sm:text-base">Putra Putri dari:</p>
+                <div class="mt-3 space-y-3 sm:space-y-4 text-gray-600">
+                  <div
+                    class="flex flex-col md:flex-row justify-center items-center md:gap-8"
+                  >
+                    <div class="text-2xl ysabeau-infant">I Nyoman Sumanasa</div>
+                    <div
+                      class="-mb-4 text-secondary-dark text-6xl sm:text-7xl md:text-8xl leading-none font-mrsdelafield"
+                    >
+                      &amp;
+                    </div>
+                    <div class="text-2xl ysabeau-infant">
+                      Ketut Santi Purnami
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
