--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
         <img
           :src="image"
           alt=""
-          class="absolute inset-0 w-full h-full object-cover object-center transition-opacity duration-500"
+          class="absolute inset-0 w-full h-full object-cover object-top transition-opacity duration-500"
           :class="galleryImages.indexOf(image) === modalBgIndex ? 'opacity-100' : 'opacity-0'"
           loading="lazy"
           decoding="async"
@@ -651,38 +651,38 @@
       <div class="absolute inset-0 bg-black/60"></div>
     </div>
 
-    <!-- Modal Pembuka -->
     <div
-      x-show="showModal"
-      x-transition:enter="transition ease-out duration-300"
-      x-transition:enter-start="opacity-0"
-      x-transition:enter-end="opacity-100"
-      x-transition:leave="transition ease-in duration-200"
-      x-transition:leave-start="opacity-100"
-      x-transition:leave-end="opacity-0"
-      class="fixed inset-0 z-50 flex items-center justify-center modal-overlay"
-      style="display: none"
-    >
-      <div
-        class="bg-white/40 backdrop-blur-[5px] rounded-2xl shadow-2xl p-6 max-w-md w-full mx-4 text-center"
-      >
-        <h2 class="text-4xl font-mrsdelafield text-secondary-dark mb-1">
-          Om Swastyastu
-        </h2>
-        <p class="text-gray-600 mb-4" x-text="guestGreeting">
-          Yth. Bapak/Ibu/Saudara/i
-        </p>
+  x-show="showModal"
+  x-transition:enter="transition ease-out duration-300"
+  x-transition:enter-start="opacity-0 translate-y-4"
+  x-transition:enter-end="opacity-100 translate-y-0"
+  x-transition:leave="transition ease-in duration-200"
+  x-transition:leave-start="opacity-100 translate-y-0"
+  x-transition:leave-end="opacity-0 translate-y-4"
+  class="fixed inset-0 z-50 flex items-end justify-center pb-[25vh] modal-overlay"
+  style="display: none"
+>
+  <div
+    class="bg-white/40 backdrop-blur-[5px] rounded-2xl shadow-2xl p-6 max-w-md w-full mx-4 text-center"
+  >
+    <h2 class="text-4xl font-mrsdelafield text-secondary-dark mb-1">
+      Om Swastyastu
+    </h2>
+    <p class="text-gray-600 mb-4" x-text="guestGreeting">
+      Yth. Bapak/Ibu/Saudara/i
+    </p>
 
-        <div class="flex gap-3 justify-center">
-          <button
-            @click="openInvitation()"
-            class="bg-[#E0D6BD] text-gray-700 px-6 py-2 rounded-full shadow hover:shadow-lg transform hover:brightness-[1.05]"
-          >
-            <i class="far fa-envelope-open mr-2"></i>Buka Undangan
-          </button>
-        </div>
-      </div>
+    <div class="flex gap-3 justify-center">
+      <button
+        @click="openInvitation()"
+        class="bg-[#E0D6BD] text-gray-700 px-6 py-2 rounded-full shadow hover:shadow-lg transform hover:brightness-[1.05]"
+      >
+        <i class="far fa-envelope-open mr-2"></i>Buka Undangan
+      </button>
     </div>
+  </div>
+</div>
+
 
     <!-- Audio (start after user interaction) -->
     <audio id="backgroundMusic" loop preload="auto" x-ref="audioPlayer">
