--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Undangan Metatah — Undangan Online Bali</title>
-    <meta
-      name="description"
-      content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali, single-file, campuran modern & tradisional."
-    />
-    <meta
-      property="og:title"
-      content="Undangan Metatah — Undangan Online Bali"
-    />
-    <meta
-      property="og:description"
-      content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali."
-    />
-    <meta property="og:image" content="https://andrianfamily.netlify.app/assets/og.jpg"  />
+    <!-- HTML Meta Tags -->
+<title>Undangan Metatah — Undangan Online Bali</title>
+<meta name="description" content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://andrianfamily.netlify.app">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Undangan Metatah — Undangan Online Bali">
+<meta property="og:description" content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/209a2fed-f310-4d6e-aa2e-6be8928a999a.jpg?token=jl_30nt0WF66VwtnFT_ye9vjudvP0bAOmOcaZrTnQDQ&height=800&width=1200&expires=33297032271">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="andrianfamily.netlify.app">
+<meta property="twitter:url" content="https://andrianfamily.netlify.app">
+<meta name="twitter:title" content="Undangan Metatah — Undangan Online Bali">
+<meta name="twitter:description" content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/209a2fed-f310-4d6e-aa2e-6be8928a999a.jpg?token=jl_30nt0WF66VwtnFT_ye9vjudvP0bAOmOcaZrTnQDQ&height=800&width=1200&expires=33297032271">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <meta name="theme-color" content="#f3f4f6" />
     <link rel="icon" href="svgviewer-output.svg" />
 
