--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Undangan Metatah — Undangan Online Bali">
 <meta property="og:description" content="Undangan Metatah (Potong Gigi) — undangan online bertema Bali.">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/209a2fed-f310-4d6e-aa2e-6be8928a999a.jpg?token=jl_30nt0WF66VwtnFT_ye9vjudvP0bAOmOcaZrTnQDQ&height=800&width=1200&expires=33297032271">
+<meta property="og:image" itemprop="image" content="https://opengraph.b-cdn.net/production/images/209a2fed-f310-4d6e-aa2e-6be8928a999a.jpg?token=jl_30nt0WF66VwtnFT_ye9vjudvP0bAOmOcaZrTnQDQ&height=800&width=1200&expires=33297032271">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
