--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                 </div>
                 <div class="p-4">
                   <div class="text-sm text-gray-500">Waktu</div>
-                  <div class="text-xl font-bold mt-2">10:00 - 14:00 WITA</div>
+                  <div class="text-xl font-bold mt-2">12:00 WITA - selesai</div>
                 </div>
               </div>
 
